# cc_quark_christo

./: .gitignore  .gitmodules  README.md  config.json  makefile
doc/: .gitignore  qtest.py
qkernel/: Cargo.toml  aarch64-qkernel.json  makefile
qkernel/src/: attestation_agent.rs  drivers.rs  kernel_def.rs  lib.rs  task.rs  taskMgr.rs  vcpu.rs
qkernel/src/attestation_agent/: attester.rs  config.rs  kbc.rs  util.rs
qkernel/src/attestation_agent/attester/cca/: mod.rs
qkernel/src/attestation_agent/attester/sev/: mod.rs  util.rs
qkernel/src/attestation_agent/attester/tdx/: mod.rs
qkernel/src/attestation_agent/kbc/: background_model.rs
qkernel/src/attestation_agent/util/: connection.rs  crypto.rs  token.rs
qkernel/src/drivers/: attestation.rs  tee.rs
qkernel/src/drivers/arm-cca/: attestation.rs
qkernel/src/drivers/tee/: attestation.rs  sev.rs  tdx.rs
qkernel/src/drivers/tee/cca/: attestation.rs
qkernel/src/drivers/tee/sev/: attestation.rs
qkernel/src/drivers/tee/tdx/: attestation.rs
qkernel/src/fs/: dirent.rs
qkernel/src/interrupt/x86_64/: mod.rs
qkernel/src/quring/: async.rs  uring_mgr.rs
qkernel/src/syscalls/: sys_mmap.rs  sys_proxy.rs
qlib/: addr.rs  bytestream.rs  common.rs  config.rs  fileinfo.rs  linux_def.rs  mod.rs  pagetable.rs  socket_buf.rs  task_mgr.rs  vcpu_mgr.rs
qlib/cc/: mod.rs
qlib/cc/tdx/: mod.rs  trampoline.elf  trampoline.s
qlib/kernel/: Kernel.rs  Kernel_cc.rs  guestfdnotifier.rs  taskMgr.rs
qlib/kernel/arch/: tee.rs
qlib/kernel/asm/: aarch64.rs
qlib/kernel/boot/: fs.rs  loader.rs
qlib/kernel/fs/: dirent.rs
qlib/kernel/kernel/: shm.rs
qlib/kernel/loader/: loader.rs
qlib/kernel/memmgr/: mm.rs  pma.rs  pmamgr.rs
qlib/kernel/quring/: uring_mgr.rs
qlib/kernel/threadmgr/: task_exit.rs
qlib/mem/: cc_allocator.rs  list_allocator.rs
qlib/proxy/: mod.rs
qlib/qmsg/: mod.rs  qcall.rs
qlib/uring/: mod.rs
qvisor/: Cargo.toml  makefile
qvisor/src/: amd64_def.rs  heap_alloc.rs  kernel_def.rs  kvm_vcpu.rs  kvm_vcpu_aarch64.rs  main.rs  print.rs  qcall.rs
qvisor/src/arch/: kvm.rs  mod.rs  tee.rs
test/c/: client.c
(+49 files in other folders)
