[package]
name = "qkernel"
version = "0.6.0"
authors = ["Yulin Sun <yulin.sun@quarksoft.io>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "0.10.1"
bitflags = "1.2.1"
cache-padded = "1.1.1"
spin = "0.9.2"
#xmas-elf = { git = "https://github.com/gz/xmas-elf.git" }
xmas-elf = "0.7.0"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = { version = "1.0.106", default-features = false}
scopeguard = { version = "^1.1.0", default-features = false }
hashbrown = "0.12.3"
enum_dispatch = { git = "https://github.com/QuarkContainer/enum_dispatch_clone.git" }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
#Requires features for Confidential Computing
rsa = {version = "0.6.1", default-features = false, features = ["pem"]}
aes-gcm = {version = "0.10.3"}
embedded-tls = {version = "0.17.0", default-features = false, features = ["log"]}
embedded-io = "0.6.1"
httparse = {version = "1.8.0", default-features = false }
base64 = {version = "0.12.3", default-features = false, features = ["alloc"]}
jwt-compact = {version = "0.8.0", default-features = false}
kbs-types = {version = "0.7.0", default-features = false, features = ["alloc"]}
zeroize = "1.6.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.7"
getrandom = {version = "0.2", features = ["rdrand"]}

[target.'cfg(target_arch = "aarch64")'.dependencies]
getrandom = {version = "0.2", features = ["custom"]}

[package.metadata.cargo-xbuild]
sysroot_path = "../target/sysroot"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[profile.dev]
panic = "abort"
debug = 1
lto = true
opt-level = 2

[profile.release]
panic = "abort"
#opt-level = 0
opt-level = 3
debug = 0
overflow-checks = false
lto = true
codegen-units = 1
debug-assertions = false
